# FastBigApi-example

./: .env.example  .gitignore  README.md  makefile  pyproject.toml
hrflow/common/: base_settings.py  str_enum.py
hrflow/database/: constants.py
hrflow/database/connection/: sql_connection_manager.py  transaction_base.py
hrflow/database/models/: __init__.py  application_model.py  base_db_model.py  jobpost_model.py  user_model.py
hrflow/database/settings/: __init__.py  database_settings.py  postgres_database_settings.py  rdbms_settings.py  sqlite_database_settings.py
hrflow/tests/: conftest.py  test_it.py
hrflow/tests/web/apps/auth/: test_auth_controller.py
hrflow/tests/web/apps/jobpost/: test_application_controller.py  test_jobpost_controller.py
hrflow/web/: app.py  app_factory.py  core.py  db_di_container.py  exceptions.py  global_di_container.py  web_settings.py
hrflow/web/apps/auth/: app.py  auth_core.py  auth_di_container.py  auth_settings.py  exceptions.py  schema.py
hrflow/web/apps/auth/controller/: __init__.py  auth_controller.py
hrflow/web/apps/auth/core/: password_hasher.py
hrflow/web/apps/auth/privileges/: user_owner_privilege.py
hrflow/web/apps/auth/repository/: user_repository.py
hrflow/web/apps/auth/service/: auth_service.py
hrflow/web/apps/base/: base_privilege.py
hrflow/web/apps/jobpost/: app.py  exceptions.py  jobpost_di_container.py  schema.py
hrflow/web/apps/jobpost/controller/: __init__.py  application_controller.py  jobpost_controller.py
hrflow/web/apps/jobpost/privileges/: jobpost_owner_privilege.py
(+4 files in other folders)
